for now, added invisible appbar to prevent projects grid from pushing title upwards

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 body, html, #root {
   height: 100% !important;
   margin: 0;
+  background-color: #242424;
 }
 
 code {
